# japanese-text-level

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  ROADMAP.md  index.html  main.py  mkdocs.yml  pyproject.toml
ROADMAP/: index.html
docs/: ROADMAP.md  index.md  main.md  wk.md
files/: example_text.txt  kanjis_wanikani_levels.json  text.txt  vocabs_wanikani_levels.json
main/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/ROADMAP/: index.html
site/main/: index.html
site/search/: search_index.json
site/wk/: index.html
src/japanese_text_level/: main.py
src/japanese_text_level/backend/: api.py
src/japanese_text_level/files/: example_text.txt  kanjis_wanikani_levels.json
src/japanese_text_level/frontend/: package-lock.json  package.json
src/japanese_text_level/frontend/src/: App.css  App.tsx
src/japanese_text_level/systems/: wk.py
test/: test_main.py  test_wk.py
wk/: index.html
