[project]
name = "japanese_text_level"
version = "0.1.0"
description = "Calculate WaniKani level required to read a Japanese text."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "regex>=2026.1.15",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ty>=0.0.17",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
wk_level = "japanese_text_level.main:main"

[tool.uv]
package = true
