[project]
name = "japanese_text_level"
version = "0.1.1"
description = "Calculate WaniKani level required to read a Japanese text."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocstrings[python]>=1.0.3",
    "numpy>=2.4.2",
    "regex>=2026.1.15",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "pytest>=9.0.2",
    "ty>=0.0.17",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-include-markdown-plugin>=7.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
jp-level = "japanese_text_level.main:main"

[tool.uv]
package = true

[tool.setuptools.package-data]
japanese_text_level = ["files/*.json", "files/*.txt"]
