[project]
name = "japanese_text_level"
version = "0.1.1"
description = "Calculate WaniKani level required to read a Japanese text."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.4.2",
    "regex>=2026.1.15",
]

[project.optional-dependencies]
web = [
    "fastapi[standard]>=0.129.0",
]

dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "pytest>=9.0.2",
    "ty>=0.0.17",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
jp-level = "japanese_text_level.cli.main:main"


[tool.uv]
package = true

[tool.setuptools.package-data]
japanese_text_level = ["files/*.json", "files/*.txt"]
